// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expenses Summary with 1 expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    235
     
  </h1>
</div>
`;

exports[`should render Expenses Summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    2350
     
  </h1>
</div>
`;
